--- a/index.html
+++ b/index.html
@@ -59,10 +59,7 @@
 				<div class="content_a">About</div>
 			</div>
 			<div class="inner_content">
-				<p>Hey my name's Amandeep but you can call me Aman. I'm a Full Stack Developer. I completed 14 weeks immersive boot camp,
-					attaining knowledge in Python, MEAN, IOS. Introduced to programming while completing BA in Management Information Systems
-					from San Jose State University. Passion for creativity lead me to self-taught Swift and thus creating my first game
-					app.
+				<p>Hey, my name is Amandeep but you can call me Aman. I am a Full Stack Developer. I have completed a 14 week immersive boot camp, attaining knowledge in Python, MEAN, IOS. I was introduced to programming while completing a Bachelor’s of Sciences in Management Information Systems from San Jose State University. Passion for creativity lead me to be self-taught (in Swift?) and thus creating my first gaming app..
 				</p>
 				<p></p>
 				<p>I want to use my passion for creativity and programming knowledge to create innovative programs.</p>
@@ -263,7 +260,7 @@
 							<div class="card-body">
 								<h4 class="card-title">Cotidien Me</h4>
 								<p class="card-text">
-									CotidienMe is social chat project. It is more like a Facebook Clone. It is still in progress. Using MEAN stack to creat it.
+									CotidienMe is social chat project. It is more like a Facebook Clone. It is still in progress. Using MEAN stack to create it.
 								</p>
 
 							</div>
@@ -299,7 +296,7 @@
 						<p>San Jose, CA</p>
 						<hr>
 						<ul>
-							<li>Bachelors in Business / Managemnt Information System</li>
+							<li>Bachelors in Business / Management Information System</li>
 
 						</ul>
 
