--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<div class="content_a">About</div>
 			</div>
 			<div class="inner_content">
-				<p>Hey, my name is Amandeep but you can call me Aman. I am a Full Stack Developer. I have completed a 14 week immersive boot camp, attaining knowledge in Python, MEAN, IOS. I was introduced to programming while completing a Bachelor’s of Sciences in Management Information Systems from San Jose State University. Passion for creativity lead me to be self-taught (in Swift?) and thus creating my first gaming app..
+				<p>Hey, my name is Amandeep but you can call me Aman. I am a Full Stack Developer. I have completed a 14 week immersive boot camp, attaining knowledge in Python, MEAN, IOS. I was introduced to programming while completing a Bachelor’s of Sciences in Management Information Systems from San Jose State University. Passion for creativity lead me to be self-taught in Swift and thus creating my first gaming app.
 				</p>
 				<p></p>
 				<p>I want to use my passion for creativity and programming knowledge to create innovative programs.</p>
